fix: info-modal layout bugged up

--- a/style.scss
+++ b/style.scss
@@ -101,6 +101,101 @@
   }
 }
 
+// INFO-MODAL
+.info-modal-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(1rem);
+  z-index: 100;
+
+  .info-modal-content {
+    padding: 1rem;
+    width: 90%;
+    height: 90%;
+    display: grid;
+    grid-template-rows: 175px 1fr;
+    justify-items: center;
+    border-radius: 1rem;
+    font-size: 0.8rem;
+    background-color: var(--foreground-color);
+    overflow-y: auto;
+
+    .info-close-button {
+      position: absolute;
+      width: 32px;
+      height: 32px;
+      top: 20px;
+      right: 20px;
+      opacity: 0.5;
+    }
+
+    .info-close-button:before,
+    .info-close-button:after {
+      content: " ";
+      position: absolute;
+      width: 2px;
+      height: 33px;
+      left: 15px;
+      background-color: var(--background-color);
+    }
+    .info-close-button:before {
+      transform: rotate(45deg);
+    }
+    .info-close-button:after {
+      transform: rotate(-45deg);
+    }
+
+    .info-modal-logo-wrapper {
+      grid-row: 1;
+    }
+
+    .info-model-paragraph-wrapper {
+      grid-row: 2;
+
+      p {
+        padding: 0.2rem;
+      }
+
+      section,
+      .paragraph-three {
+        h1 {
+          margin-top: 0.5rem;
+          margin-bottom: 0;
+          font-size: 1rem;
+        }
+        ol {
+          padding: 0 0 0 25px;
+          color: var(--background-color);
+          li {
+            margin: 10px 0;
+          }
+        }
+      }
+    }
+
+    .info-modal-button-wrapper {
+      grid-row: 3;
+      align-self: flex-end;
+      .info-modal-btn {
+        margin: 0.5rem;
+        width: 5rem;
+        padding: 0.5rem;
+        border: none;
+        border-radius: 0.2rem;
+        color: var(--foreground-color);
+        background-color: var(--background-color);
+        opacity: 0.7;
+      }
+    }
+  }
+}
+
 .top-grid-container {
   grid-column: 1/4;
   .header-container {
@@ -199,7 +294,7 @@
   grid-row: 2/4;
   // SPHERE CONTAINER
   .sphere-container {
-    margin-top: 8rem;
+    margin-top: 6.5rem;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -262,12 +357,14 @@
     // z-index: 400;
 
     .solfeggio-title {
+      margin-bottom: 0.3rem;
       font-size: 0.8rem;
     }
 
     #solfeggio-dropdown {
       width: 5rem;
       text-align: center;
+      font-family: "Montserrat", sans-serif;
       font-size: 1rem;
       color: var(--foreground-color);
       border: none;
@@ -354,131 +451,36 @@
     }
   }
 
-  // INFO-MODAL
-  .info-modal-container {
-    position: absolute;
+  .info-icon-container {
+    grid-row: 3;
+    grid-column: 1/3;
     width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    backdrop-filter: blur(1rem);
-    z-index: 100;
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
 
-    .info-modal-content {
-      padding: 1rem;
-      width: 90%;
-      height: 90%;
-      display: grid;
-      grid-template-rows: 175px 1fr;
-      justify-items: center;
-      border-radius: 1rem;
-      font-size: 0.8rem;
-      background-color: var(--foreground-color);
-      overflow-y: auto;
-
-      .info-close-button {
-        position: absolute;
-        width: 32px;
-        height: 32px;
-        top: 20px;
-        right: 20px;
-        opacity: 0.5;
-      }
-
-      .info-close-button:before,
-      .info-close-button:after {
-        content: " ";
-        position: absolute;
-        width: 2px;
-        height: 33px;
-        left: 15px;
-        background-color: var(--background-color);
-      }
-      .info-close-button:before {
-        transform: rotate(45deg);
-      }
-      .info-close-button:after {
-        transform: rotate(-45deg);
-      }
-
-      .info-modal-logo-wrapper {
-        grid-row: 1;
-      }
-
-      .info-model-paragraph-wrapper {
-        grid-row: 2;
-
-        p {
-          padding: 0.2rem;
-        }
-
-        section,
-        .paragraph-three {
-          h1 {
-            margin-top: 0.5rem;
-            margin-bottom: 0;
-            font-size: 1rem;
-          }
-          ol {
-            padding: 0 0 0 25px;
-            color: var(--background-color);
-            li {
-              margin: 10px 0;
-            }
-          }
-        }
-      }
-
-      .info-modal-button-wrapper {
-        grid-row: 3;
-        align-self: flex-end;
-        .info-modal-btn {
-          margin: 0.5rem;
-          width: 5rem;
-          padding: 0.5rem;
-          border: none;
-          border-radius: 0.2rem;
-          color: var(--foreground-color);
-          background-color: var(--background-color);
-          opacity: 0.7;
-        }
-      }
+    .info-icon {
+      margin-right: 1.5rem;
+      margin-bottom: 1.5rem;
+      fill: var(--foreground-color);
+      opacity: 0.5;
     }
   }
-}
 
-.info-icon-container {
-  grid-row: 3;
-  grid-column: 1/3;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-self: flex-end;
-
-  .info-icon {
-    margin-right: 1.5rem;
-    margin-bottom: 1.5rem;
-    fill: var(--foreground-color);
-    opacity: 0.5;
-  }
-}
-
-footer {
-  width: 100vw;
-  grid-row: 3;
-  grid-column: 1/3;
-  align-self: flex-end;
-  .footer-text {
-    margin-bottom: 0.6rem;
-    text-align: center;
-    font-size: 0.7rem;
-    color: var(--foreground-color);
-  }
-  .footer-link {
-    color: var(--foreground-color);
+  footer {
+    width: 100vw;
+    grid-row: 3;
+    grid-column: 1/3;
+    align-self: flex-end;
+    .footer-text {
+      margin-bottom: 0.6rem;
+      text-align: center;
+      font-size: 0.7rem;
+      color: var(--foreground-color);
+    }
+    .footer-link {
+      color: var(--foreground-color);
+    }
   }
 }
 
